# wger-agent

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
search/: search_index.json
tests/: conftest.py  test_concept_parity.py  test_coverage_booster.py  test_init.py  test_init_dynamics.py
usage/: index.html
wger_agent/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  graph_config.py  mcp.py  mcp_config.json  mcp_server.py  wger_api.py
wger_agent/agent/: CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md
wger_agent/agent_data/: A2A_AGENTS.md  IDENTITY.md  MCP_AGENTS.md  MEMORY.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json
wger_agent/api/: __init__.py  api_client_base.py  api_client_body.py  api_client_configs.py  api_client_exercises.py  api_client_nutrition.py  api_client_routine.py  api_client_user_system.py  api_client_workout_sessions.py
wger_agent/mcp/: __init__.py  mcp_server.py  tools.py
wger_agent/prompts/: main_agent.json
wger_agent/skills/wger-agent-docs/: SKILL.md
wger_agent/skills/wger-agent-docs/reference/: _images_logo.png.md  administration_auth_proxy.html.md  administration_commands.html.md  administration_gym.html.md  administration_settings.html.md  api_api.html.md  api_routines.html.md  changelog.html.md  contributing.html.md  development_backend.html.md  development_frontend.html.md  development_mobile_app.html.md  en_latest.md  manual_routines.html.md  production_docker.html.md  production_installation.html.md
