[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wger-agent"
version = "0.1.18"
description = "Wger Workout Manager — exercise database, workout routines, nutrition plans, body measurements, and progress tracking."
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[mcp]>=0.2.29"]

[project.optional-dependencies]
agent = [
    "agent-utilities[agent,logfire]>=0.2.29"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.29"]

[project.scripts]
wger-mcp = "wger_agent.mcp_server:mcp_server"
wger-agent = "wger_agent.agent_server:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
wger_agent = [ "mcp_config.json", "agent_data/**", "skills/**"]
